[package]
name = "kongkong-data"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tonic = "0.9.2"
prost = "0.11"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[build-dependencies]
tonic-build = "0.9.2"